some minor changes

--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-MONGO_URI="mongodb+srv://mohdazam0453:azam126113@cluster0.qlzi5v4.mongodb.net/"
+MONGO_URI="your mongodb connection string"
 PORT= 5000
